--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.modal {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  width: 30rem;
+  top: 20vh;
+  left: calc(50% - 15rem);
+}
+
+.backdrop {
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.75);
+  top: 0;
+  left: 0;
+}
